--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch"
   },
   "devDependencies": {
-    "vite": "^5.4.1"
+    "vite": "^5.4.8"
   },
   "keywords": [],
   "author": "nazhG",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
+    "@ffmpeg/core": "^0.12.6",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
