--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
     "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.13"
   }
